# data_engineering_hello_world

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
scripts/: run_pipeline.sh
src/: config.py
src/data/: generate_sample_data.py  transformers.py
src/pipeline/: main.py
src/utils/: file_utils.py  logging.py
