[tool.poetry]
name = "data-engine-hello-world"
version = "0.1.0"
description = "A simple data engine project"
authors = ["dengsu2 <dengshu5115@gmail.com>"]
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.0"
numpy = "^1.26.0"
polars = "^0.18.0"
duckdb = "^1.1.0"
getdaft = "^0.4.0"
openpyxl = "^3.1.0"
pyyaml = "^6.0.0"
loguru = "^0.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


